# ai4os-demo-app

./: .ai4-metadata.json  .gitignore  Dockerfile  README.md  ai4-metadata.yml  metadata.json  requirements.txt  setup.cfg  tox.ini
ai4os_demo_app/: api.py  config.py
