# -*- coding: utf-8 -*-
[metadata]
name = ai4os_demo_app
description = A demo application to test (eg. DEEPaaS testing). Does not contain any AI code.
description-file =
    README.md
author = Ignacio Heredia
author-email = iheredia@ifca.unican.es
version = 0.0.1
license = MIT
home-page = https://github.com/ai4os-hub/ai4os-demo-app
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    ai4os_demo_app

[entry_points]
deepaas.v2.model =
    ai4os_demo_app = ai4os_demo_app.api
